Bug 345458 - Tellico crashes when indexing cr2 RAW files
Summary: Tellico crashes when indexing cr2 RAW files
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.10
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL: https://forum.kde.org/viewtopic.php?f...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-24 01:43 UTC by Robby Stephenson
Modified: 2015-07-19 20:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2015-03-24 01:43:13 UTC
Application: tellico (2.3.10+git)
KDE Platform Version: 4.14.5
Qt Version: 4.8.6
Operating System: Linux 3.16.7-7-desktop x86_64
Distribution: "openSUSE 13.2 (Harlequin) (x86_64)"

-- Information about the crash:Importing a file listing for a directory with .cr2 RAW files

The crash can be reproduced every time.

-- Backtrace:
Application: Tellico (tellico), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f7da1486900 (LWP 28137))]

Thread 2 (Thread 0x7f7d866da700 (LWP 28149)):
#0  0x00007f7d99558c3d in poll () at /lib64/libc.so.6
#1  0x00007f7d9484bbe4 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f7d9484bcec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f7d9b04d0de in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#4  0x00007f7d9b01ee6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#5  0x00007f7d9b01f165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#6  0x00007f7d9af1c0bf in QThread::exec() () at /usr/lib64/libQtCore.so.4
#7  0x00007f7d9b000783 in  () at /usr/lib64/libQtCore.so.4
#8  0x00007f7d9af1e79f in  () at /usr/lib64/libQtCore.so.4
#9  0x00007f7d9ac880a4 in start_thread () at /lib64/libpthread.so.0
#10 0x00007f7d9956106d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f7da1486900 (LWP 28137)):
[KCrash Handler]
#5  0x00007f7d994b1187 in raise () at /lib64/libc.so.6
#6  0x00007f7d994b2538 in abort () at /lib64/libc.so.6
#7  0x00007f7d7e5e5a34 in  () at /usr/lib64/libavformat.so.56
#8  0x00007f7d7f9f18d5 in FFMPEGEndAnalyzer::analyze(Strigi::AnalysisResult&, Strigi::StreamBase<char>*) () at /usr/lib64/strigi/strigiea_ffmpeg.so
#9  0x00007f7d97d8eaba in  () at /usr/lib64/libstreamanalyzer.so.0
#10 0x00007f7d97d65502 in Strigi::AnalysisResult::indexChild(std::string const&, long, Strigi::StreamBase<char>*) () at /usr/lib64/libstreamanalyzer.so.0
#11 0x00007f7d97db1083 in  () at /usr/lib64/libstreamanalyzer.so.0
#12 0x00007f7d97d8eaba in  () at /usr/lib64/libstreamanalyzer.so.0
#13 0x00007f7da095da3a in  () at /usr/lib64/libkio.so.5
#14 0x00007f7da095dd0a in KFileMetaInfo::KFileMetaInfo(QString const&, QString const&, QFlags<KFileMetaInfo::What>) () at /usr/lib64/libkio.so.5
#15 0x00007f7da094adbf in KFileItem::metaInfo(bool, int) const () at /usr/lib64/libkio.so.5
#16 0x00000000005f8a51 in Tellico::Import::FileListingImporter::collection() (this=0x1ee8fa0) at /home/robby/kde/src/tellico/src/translators/filelistingimporter.cpp:160
#17 0x00000000004d26bc in Tellico::ImportDialog::collection() (this=0x7fff2907ea00) at /home/robby/kde/src/tellico/src/importdialog.cpp:148
#18 0x00000000004ecac6 in Tellico::MainWindow::importFile(Tellico::Import::Format, KUrl::List const&) (this=0x1ab9580, format_=Tellico::Import::FileListing, urls_=...) at /home/robby/kde/src/tellico/src/mainwindow.cpp:2167
#19 0x00000000004ea100 in Tellico::MainWindow::slotFileImport(int) (this=0x1ab9580, format_=11) at /home/robby/kde/src/tellico/src/mainwindow.cpp:1752
#20 0x00000000004ed582 in Tellico::MainWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x1ab9580, _c=QMetaObject::InvokeMetaMethod, _id=26, _a=0x7fff2907eda0) at /home/robby/kde/build/tellico/src/mainwindow.moc:182
#21 0x00007f7d9b0341fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#22 0x00007f7d9b03b91e in QSignalMapper::mapped(int) () at /usr/lib64/libQtCore.so.4
#23 0x00007f7d9b03ba26 in QSignalMapper::map(QObject*) () at /usr/lib64/libQtCore.so.4
#24 0x00007f7d9b0341fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#25 0x00007f7d99f19622 in QAction::triggered(bool) () at /usr/lib64/libQtGui.so.4
#26 0x00007f7d99f1afd3 in QAction::activate(QAction::ActionEvent) () at /usr/lib64/libQtGui.so.4
#27 0x00007f7d9a343b79 in  () at /usr/lib64/libQtGui.so.4
#28 0x00007f7d9a3480c9 in  () at /usr/lib64/libQtGui.so.4
#29 0x00007f7da0fb4df5 in KMenu::mouseReleaseEvent(QMouseEvent*) () at /usr/lib64/libkdeui.so.5
#30 0x00007f7d99f6ec0a in QWidget::event(QEvent*) () at /usr/lib64/libQtGui.so.4
#31 0x00007f7d9a34bf2b in QMenu::event(QEvent*) () at /usr/lib64/libQtGui.so.4
#32 0x00007f7d99f1f76c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#33 0x00007f7d99f25dea in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#34 0x00007f7da0efecea in KApplication::notify(QObject*, QEvent*) () at /usr/lib64/libkdeui.so.5
#35 0x00007f7d9b0202ad in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQtCore.so.4
#36 0x00007f7d99f255e3 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () at /usr/lib64/libQtGui.so.4
#37 0x00007f7d99f96fcc in  () at /usr/lib64/libQtGui.so.4
#38 0x00007f7d99f9570c in QApplication::x11ProcessEvent(_XEvent*) () at /usr/lib64/libQtGui.so.4
#39 0x00007f7d99fbc5c2 in  () at /usr/lib64/libQtGui.so.4
#40 0x00007f7d9484ba04 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#41 0x00007f7d9484bc48 in  () at /usr/lib64/libglib-2.0.so.0
#42 0x00007f7d9484bcec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#43 0x00007f7d9b04d0be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#44 0x00007f7d99fbc676 in  () at /usr/lib64/libQtGui.so.4
#45 0x00007f7d9b01ee6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#46 0x00007f7d9b01f165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#47 0x00007f7d9b0245b9 in QCoreApplication::exec() () at /usr/lib64/libQtCore.so.4
#48 0x00000000004d90fa in main(int, char**) (argc=1, argv=0x7fff290803f8) at /home/robby/kde/src/tellico/src/main.cpp:95

Reproducible: Always
Comment 1 Robby Stephenson 2015-03-26 00:37:29 UTC
Another backtrace with libstreamanazlyzer included

Thread 1 (Thread 0x7f3a42ef5900 (LWP 6201)):
[KCrash Handler]
#5  0x00007f3a3af20187 in raise () at /lib64/libc.so.6
#6  0x00007f3a3af21538 in abort () at /lib64/libc.so.6
#7  0x00007f3a2427ea34 in  () at /usr/lib64/libavformat.so.56
#8  0x00007f3a2568a8d5 in FFMPEGEndAnalyzer::analyze(Strigi::AnalysisResult&, Strigi::StreamBase<char>*) () at /usr/lib64/strigi/strigiea_ffmpeg.so
#9  0x00007f3a397fdaba in Strigi::StreamAnalyzerPrivate::analyze(Strigi::AnalysisResult&, Strigi::StreamBase<char>*) (this=0x315a930, idx=..., input=0x31fffe0, input@entry=0x31cfe00) at /usr/src/debug/strigi-0.7.8/libstreamanalyzer/lib/streamanalyzer.cpp:418
#10 0x00007f3a397fdee8 in Strigi::StreamAnalyzer::analyze(Strigi::AnalysisResult&, Strigi::StreamBase<char>*) (this=<optimized out>, idx=..., input=input@entry=0x31cfe00) at /usr/src/debug/strigi-0.7.8/libstreamanalyzer/lib/streamanalyzer.cpp:359
#11 0x00007f3a397d4502 in Strigi::AnalysisResult::indexChild(std::string const&, long, Strigi::StreamBase<char>*) (this=this@entry=0x7fff5cb499d0, name="IMG_5953.CR2", mt=1310876280, file=file@entry=0x31cfe00) at /usr/src/debug/strigi-0.7.8/libstreamanalyzer/lib/analysisresult.cpp:251
#12 0x00007f3a39820083 in ZipEndAnalyzer::analyze(Strigi::AnalysisResult&, Strigi::StreamBase<char>*) (this=0x31c8bc0, idx=..., in=0x31597d0) at /usr/src/debug/strigi-0.7.8/libstreamanalyzer/lib/endanalyzers/zipendanalyzer.cpp:62
#13 0x00007f3a397fdaba in Strigi::StreamAnalyzerPrivate::analyze(Strigi::AnalysisResult&, Strigi::StreamBase<char>*) (this=0x315a930, idx=..., input=0x31597d0) at /usr/src/debug/strigi-0.7.8/libstreamanalyzer/lib/streamanalyzer.cpp:418
#14 0x00007f3a423cca3a in  () at /usr/lib64/libkio.so.5
#15 0x00007f3a423ccd0a in KFileMetaInfo::KFileMetaInfo(QString const&, QString const&, QFlags<KFileMetaInfo::What>) () at /usr/lib64/libkio.so.5
#16 0x00007f3a423b9dbf in KFileItem::metaInfo(bool, int) const () at /usr/lib64/libkio.so.5
#17 0x00000000005f93d9 in Tellico::Import::FileListingImporter::collection() (this=0x2ab13b0) at /home/robby/kde/src/tellico/src/translators/filelistingimporter.cpp:160
#18 0x00000000004d264c in Tellico::ImportDialog::collection() (this=0x7fff5cb4a3b0) at /home/robby/kde/src/tellico/src/importdialog.cpp:148
#19 0x00000000004eca56 in Tellico::MainWindow::importFile(Tellico::Import::Format, KUrl::List const&) (this=0x28d4d80, format_=Tellico::Import::FileListing, urls_=...) at /home/robby/kde/src/tellico/src/mainwindow.cpp:2167
#20 0x00000000004ea090 in Tellico::MainWindow::slotFileImport(int) (this=0x28d4d80, format_=11) at /home/robby/kde/src/tellico/src/mainwindow.cpp:1752
#21 0x00000000004ed512 in Tellico::MainWindow::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x28d4d80, _c=QMetaObject::InvokeMetaMethod, _id=26, _a=0x7fff5cb4a750) at /home/robby/kde/build/tellico/src/mainwindow.moc:182
#22 0x00007f3a3caa31fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#23 0x00007f3a3caaa91e in QSignalMapper::mapped(int) () at /usr/lib64/libQtCore.so.4
#24 0x00007f3a3caaaa26 in QSignalMapper::map(QObject*) () at /usr/lib64/libQtCore.so.4
#25 0x00007f3a3caa31fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#26 0x00007f3a3b988622 in QAction::triggered(bool) () at /usr/lib64/libQtGui.so.4
#27 0x00007f3a3b989fd3 in QAction::activate(QAction::ActionEvent) () at /usr/lib64/libQtGui.so.4
#28 0x00007f3a3bdb2b79 in  () at /usr/lib64/libQtGui.so.4
#29 0x00007f3a3bdb70c9 in  () at /usr/lib64/libQtGui.so.4
#30 0x00007f3a42a23df5 in KMenu::mouseReleaseEvent(QMouseEvent*) () at /usr/lib64/libkdeui.so.5
#31 0x00007f3a3b9ddc0a in QWidget::event(QEvent*) () at /usr/lib64/libQtGui.so.4
#32 0x00007f3a3bdbaf2b in QMenu::event(QEvent*) () at /usr/lib64/libQtGui.so.4
#33 0x00007f3a3b98e76c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#34 0x00007f3a3b994dea in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#35 0x00007f3a4296dcea in KApplication::notify(QObject*, QEvent*) () at /usr/lib64/libkdeui.so.5
#36 0x00007f3a3ca8f2ad in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQtCore.so.4
#37 0x00007f3a3b9945e3 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () at /usr/lib64/libQtGui.so.4
#38 0x00007f3a3ba05fcc in  () at /usr/lib64/libQtGui.so.4
#39 0x00007f3a3ba0470c in QApplication::x11ProcessEvent(_XEvent*) () at /usr/lib64/libQtGui.so.4
#40 0x00007f3a3ba2b5c2 in  () at /usr/lib64/libQtGui.so.4
#41 0x00007f3a362baa04 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#42 0x00007f3a362bac48 in  () at /usr/lib64/libglib-2.0.so.0
#43 0x00007f3a362bacec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#44 0x00007f3a3cabc0de in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#45 0x00007f3a3ba2b676 in  () at /usr/lib64/libQtGui.so.4
#46 0x00007f3a3ca8de6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#47 0x00007f3a3ca8e165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#48 0x00007f3a3ca935b9 in QCoreApplication::exec() () at /usr/lib64/libQtCore.so.4
#49 0x00000000004d908a in main(int, char**) (argc=2, argv=0x7fff5cb4bda8) at /home/robby/kde/src/tellico/src/main.cpp:95
Comment 2 Robby Stephenson 2015-07-19 20:20:36 UTC
Git commit 394b92d94cc90d5ce3c598bfc74c00f22823d174 by Robby Stephenson.
Committed on 19/07/2015 at 20:19.
Pushed by rstephenson into branch '2.3'.

Check that Nepomuk is running before querying all file metainfo

Seems to partially fix a crashing bug with certain file types.
FIXED-IN: 2.3.11

M  +4    -0    ChangeLog
M  +14   -11   src/translators/filelistingimporter.cpp

http://commits.kde.org/tellico/394b92d94cc90d5ce3c598bfc74c00f22823d174