Check that Nepomuk is running before querying all file metainfo

Seems to partially fix a crashing bug with certain file types.

BUG: 345458
FIXED-IN: 2.3.11